--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     /* Swagger */
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
+    /* JWT */
+    implementation group: 'com.auth0', name: 'java-jwt', version: '4.2.1'
 
 }
 
