--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     /* JWT */
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.2.1'
 
+    /* AWS S3 */
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
