--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 src/main/resources/*.yml
+src/main/resources/data.sql
 node_mudules/
 a
 ### STS ###
