--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1")
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
+
+    /* Actuator */
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 }
 
 tasks.named('test') {
