--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,7 @@ application.yml
 ### QueryDSL generated Q classes ###
 /src/main/generated/
 /src/main/java/com/kdev5/cleanpick/dev
+/src/main/resources/firebase-config.json
+src/main/resources/*
 
 Dockerfile
